# warpd

./: .gitignore  CLAUDE.md  FORK_CHANGES.md  Makefile  README.md  warpd.1.md
docs/: GPUI_INTEGRATION_PLAN.md
files/warpd-url-handler/: Info.plist
mk/: macos.mk  rust.mk
src/: config.c  daemon.c  grid.c  hint.c  input.c  ipc.c  ipc.h  mode-loop.c  mouse.c  normal.c  platform.h  screen.c  warpd.c  warpd.h
src/platform/linux/X/: X.c  X.h  hint.c  input.c
src/platform/linux/wayland/: hint.c  wayland.c  wayland.h
src/platform/macos/: ax_debug.h  ax_debug.m  ax_helpers.h  ax_helpers.m  ax_menu.h  ax_menu.m  ax_traverse.h  ax_traverse.m  hint.m  input.m  macos.h  macos.m  mouse.m  screen.m  url_handler.m
src/platform/windows/: windows.c  windows.h  winscreen.c
ui/: Cargo.toml
ui/src/: app.rs  lib.rs  main.rs  theme.rs
ui/src/components/: category_list.rs  color_picker.rs  font_picker.rs  key_input.rs  mod.rs  search_bar.rs  slider.rs
ui/src/ipc/: client.rs  handler.rs  mod.rs  protocol.rs
ui/src/state/: config.rs  elements.rs  mod.rs
ui/src/views/: mod.rs  palette.rs  preview.rs  settings.rs
