[package]
name = "warpd-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread"] }
fuzzy-matcher = "0.3"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific deps go here

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
core-text = { path = "vendor/core-text" }
